--- a/framework/trunk/src/com/nordicpeak/flowengine/queries/radiobuttonquery/staticcontent/StaticContentLinks.properties
+++ b/framework/trunk/src/com/nordicpeak/flowengine/queries/radiobuttonquery/staticcontent/StaticContentLinks.properties
@@ -1,3 +1,4 @@
+/common/css = /com/nordicpeak/flowengine/queries
 /common/js = /com/nordicpeak/flowengine/queries
 /common/pics = /com/nordicpeak/flowengine/queries
 /common/ckeditor = /com/nordicpeak/flowengine/queries
