--- a/modules/PersonDataInformerModule/trunk/src/com/nordicpeak/flowengine/persondatasavinginformer/staticcontent/StaticContentLinks.properties
+++ b/modules/PersonDataInformerModule/trunk/src/com/nordicpeak/flowengine/persondatasavinginformer/staticcontent/StaticContentLinks.properties
@@ -1,2 +1,3 @@
 /js = /com/nordicpeak/flowengine/staticcontent
 /pics = /com/nordicpeak/flowengine/staticcontent
+/ckeditor = /com/nordicpeak/flowengine/staticcontent
