--- a/modules/FlowSharing/trunk/src/com/nordicpeak/flowengine/sharing/staticcontent/StaticContentLinks.properties
+++ b/modules/FlowSharing/trunk/src/com/nordicpeak/flowengine/sharing/staticcontent/StaticContentLinks.properties
@@ -1,3 +1,3 @@
-/css = /com/nordicpeak/flowengine/staticcontent
-/js = /com/nordicpeak/flowengine/staticcontent
+/css = /com/nordicpeak/flowengine/staticcontent;/com/nordicpeak/flowengine/queries/common
+/js = /com/nordicpeak/flowengine/staticcontent;/com/nordicpeak/flowengine/queries/common
 /pics = /com/nordicpeak/flowengine/staticcontent
