- Removed local JTS copy
git-svn-id: svn://svn.sundsvall.se/oep-dev@715 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/queries/BaseMapQuery/trunk/.project
+++ b/queries/BaseMapQuery/trunk/.project
@@ -3,6 +3,7 @@
 	<name>BaseMapQuery</name>
 	<comment></comment>
 	<projects>
+		<project>JTS</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
