--- a/queries/BaseMapQuery/trunk/.classpath
+++ b/queries/BaseMapQuery/trunk/.classpath
@@ -22,12 +22,12 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="lib/jts-1.8.jar">
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/cron4j">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/cron4j">
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/JTS">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
