- Updated local map configuration for PUDMapQuery, SinglePolygonQuery and MultiGeometryQuery
git-svn-id: svn://svn.sundsvall.se/oep-dev@732 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/queries/MultiGeometryMapQuery/trunk/src/com/nordicpeak/flowengine/queries/multigeometrymapquery/printconfig/printconfig.json
+++ b/queries/MultiGeometryMapQuery/trunk/src/com/nordicpeak/flowengine/queries/multigeometrymapquery/printconfig/printconfig.json
@@ -7,7 +7,7 @@
    "attribution": "Kartan har ingen rättsverkan du kan alltså INTE se exakta gränser i denna karttjänst ©Lantmäteriet Geodatasamverkan",
    "layers":[
       {
-         "baseURL":"https://extmap.sundsvall.se/geoserver/wms",
+         "baseURL":"https://karta.sundsvall.se/geoserver/wms",
          "opacity":1,
          "singleTile":true,
          "type":"WMS",
@@ -20,7 +20,7 @@
          ]
       },
       {
-         "baseURL":"https://extmap.sundsvall.se/geoserver/wms",
+         "baseURL":"https://karta.sundsvall.se/geoserver/wms",
          "opacity":1,
          "singleTile":true,
          "type":"WMS",
