- Fixed Eclipse warnings
git-svn-id: svn://svn.sundsvall.se/oep-dev@1061 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/queries/PUDMapQuery/trunk/.classpath
+++ b/queries/PUDMapQuery/trunk/.classpath
@@ -22,6 +22,10 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="/Flexjson"/>
+	<classpathentry exported="true" kind="src" path="/Flexjson">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
