--- a/modules/FlowInstanceStatisticsAPI/trunk/.classpath
+++ b/modules/FlowInstanceStatisticsAPI/trunk/.classpath
@@ -13,6 +13,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/CullingModule"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/CullingModule">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
