--- a/modules/FlowApprovalModule/trunk/.classpath
+++ b/modules/FlowApprovalModule/trunk/.classpath
@@ -18,5 +18,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/iText"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/FlyingSaucer"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
