--- a/modules/FlowApprovalModule/trunk/.classpath
+++ b/modules/FlowApprovalModule/trunk/.classpath
@@ -18,7 +18,15 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/iText"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/FlyingSaucer"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/FlyingSaucer">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenPDF">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
