--- a/modules/FlowApprovalModule/trunk/.classpath
+++ b/modules/FlowApprovalModule/trunk/.classpath
@@ -28,5 +28,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="/PDFBox"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
