- Added support for hiding flow instance ID in generated PDF's
git-svn-id: svn://svn.sundsvall.se/oep-dev@1902 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/modules/FlowApprovalModule/trunk/.classpath
+++ b/modules/FlowApprovalModule/trunk/.classpath
@@ -28,6 +28,10 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="/PDFBox"/>
+	<classpathentry exported="true" kind="src" path="/PDFBox">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
