--- a/framework/trunk/.classpath
+++ b/framework/trunk/.classpath
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
@@ -7,7 +7,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
+	
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/cron4j">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
@@ -39,4 +39,5 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
+<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ServletAPI"/>
 </classpath>
