--- a/modules/FlowEngineIntegrationCallback/trunk/.classpath
+++ b/modules/FlowEngineIntegrationCallback/trunk/.classpath
@@ -1,12 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-		<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.utility"/>
-		</attributes>
-	</classpathentry>
+		
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenHierarchy">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
@@ -24,4 +20,5 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
+<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ServletAPI"/>
 </classpath>
