- Moved PDFUtils from FlowInstancePDFGenerator to FlowEngine - Added OpenPDF to assembly; used in PDFUtils
git-svn-id: svn://svn.sundsvall.se/oep-dev@2220 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/.classpath
+++ b/framework/trunk/.classpath
@@ -7,7 +7,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/cron4j">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
@@ -38,6 +37,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ServletAPI"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/OpenPDF"/>
 	<classpathentry kind="output" path="bin"/>
-<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ServletAPI"/>
 </classpath>
