--- a/.github/workflows/fetch-from-svn.yml
+++ b/.github/workflows/fetch-from-svn.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Run a single-line command
+      - name: Checkout SVN repo
         run: svn co svn://svn.nordicpeak.com/openeplatform .
       # Commit all changed files back to the repository
       - uses: stefanzweifel/git-auto-commit-action@v5
