--- a/.github/workflows/fetch-from-svn.yml
+++ b/.github/workflows/fetch-from-svn.yml
@@ -1,4 +1,4 @@
-name: Fetch code changes from SVN-repo
+name: Fetch from SVN-repo
 
 # Controls when the workflow will run
 on:
@@ -13,7 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      # Checkout code from SVN
       - name: Checkout SVN repo
         run: svn co svn://svn.nordicpeak.com/openeplatform .
-      # Commit all changed files back to the repository
+      # Commit all changed files to this GIT repository
       - uses: stefanzweifel/git-auto-commit-action@v5
