--- a/.github/workflows/fetch-from-svn.yml
+++ b/.github/workflows/fetch-from-svn.yml
@@ -8,23 +8,28 @@ on:
   # At 01:00 every night (Please note: GitHub actions schedule is in UTC time).
     - cron: "0 1 * * *"
 jobs:
-  mirror:
+  fetch:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Install git-svn
-        run: sudo apt-get update && sudo apt-get install git-svn
-      - name: Fetch SVN as Git
+      - name: Install subversion
+        run: sudo apt-get update && sudo apt-get install -y subversion
+
+      - name: Checkout GitHub repo
+        uses: actions/checkout@v4
+
+      - name: Export SVN
+        run: svn export --force svn://svn.nordicpeak.com/filearchive ./filearchive
+
+      - name: Get latest SVN commit message
+        id: svnmsg
         run: |
-          git svn clone \
-            --trunk=trunk \
-            --authors-file=.github/authors.txt \
-            svn://svn.nordicpeak.com/openeplatform \
-            repo-mirror
-      - name: Push to GitHub
-        run: |
-          cd repo-mirror
-          git remote add origin "${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}.git"
-          git push --mirror origin
+          echo "SVN_MSG=$(svn log -l 1 svn://svn.nordicpeak.com/filearchive --quiet --non-interactive | sed -n '2p')" >> $GITHUB_ENV
+
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "${{ env.SVN_MSG }}"
  
   # Prevents this action from being disabled due to repository inactivity. See: https://docs.github.com/en/actions/administering-github-actions/usage-limits-billing-and-administration#disabling-and-enabling-workflows
   workflow-keepalive:
