--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,4 @@
-name: Fetch from SVN-repo
-
+name: Run test
 # Controls when the workflow will run
 on:
   # Allows you to run this workflow manually from the Actions tab
